--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,100 @@
+/* General settings */
+
 *, *::before, *::after{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+:root{
+    --header: #0084FD;
+    --background-color: #9792E4;
+}
+
+html{
+    font-family: sans-serif;
+}
+
+/* Nav-bar */
+
+header{
+    background-color: var(--header);
+}
+
+.nav-bar{
+    max-width: 1100px;
+    margin: auto;
+}
+
+.menu-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 10vh;
+}
+
+.menu-item .logo{
+    padding-right: 30rem;
+}
+
+.menu-item li{
+    list-style: none;
+}
+
+.menu-item a{
+    text-decoration: none;
+    color: white;
+}
+
+.menu-item .btn a{
+    color: black;
+    background-color: white;
+    padding: 0.3rem 0.5rem;
+    border-radius: 4rem;
+}
+
+.hamburger-bar a{
+    display: none;
+}
+
+/* media-queries Nav-bar */
+
+@media screen and (max-width:810px){
+
+    header{
+        max-width: 100%;
+    }
+
+    .nav-bar{
+        max-width: 100%;
+        margin: auto;
+    }
+
+    .items a{
+        display: none;
+    }    
+
+    .hamburger-bar a{
+        display: block;
+    }
+}
+
+@media screen and (max-width:375px){
+
+    header{
+        max-width: 100%;
+    }
+
+    .nav-bar{
+        max-width: 100%;
+        margin: auto;
+    }
+
+    .items a{
+        display: none;
+    } 
+    
+    .hamburger-bar a{
+        display: block;
+    }
 }
