Add first section

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
 :root{
     --header: #0084FD;
     --background-color: #9792E4;
+    --card-firstsec: #B5DDFF;
 }
 
 html{
@@ -35,6 +36,10 @@ header{
 
 .nav-menu .logo{
     padding-left: 0.5rem;
+}
+
+.logo img{
+    width: 100px;
 }
 
 .items{
@@ -109,5 +114,83 @@ header{
 }
 
 
-/* Main */
+/* Inizio Main - Prima sezione-card */
+
+.container{
+    max-width: 1100px;
+    margin-inline: auto;
+    margin-top: 2rem;
+}
+
+.card-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.card-double{
+    flex: 0 0 66.666%;
+    display: flex;
+    border-radius: 2rem;
+    background-color: var(--card-firstsec);
+}
+
+.card{
+    flex: 0 0 calc((100% - (1rem * 3)) / 3);
+    background-color: var(--card-firstsec);
+    border-radius: 2rem;
+}
+
+.card-double .content{
+    flex: 0 0 60%;
+    padding: 2rem 1rem;
+}
+
+.img-phone{
+    flex: 0 0 40%;
+    padding-top: 4rem;
+}
+
+.content h4{
+    color: var(--header);
+    font-size: 1.5rem;
+    padding-bottom: 2rem;
+}
+
+.content p{
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+}
+
+.btn-blue{
+    margin-top: 2rem;
+}
+
+.btn-blue a{
+    padding: 0.3rem 0.5rem;
+    color: white;
+    text-decoration: none;
+    background-color: var(--header);
+    border-radius: 1rem ;
+}
+
+img{
+    width: 200px;
+}
+
+.card .icon{
+    color: var(--header);
+    font-size: 5rem;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.card h4, 
+.card p{
+    text-align: center;
+    font-size: 0.8rem;
+    padding: 0.6rem 2rem;
+}
+
+
 
