--- a/assets/style.css
+++ b/assets/style.css
@@ -417,7 +417,7 @@ img{
     font-size: 1rem;
     font-weight: 600;
     padding-top: 2rem;
-    padding-right: 3rem;
+    
 }
 
 .btn-linkedin{
@@ -431,4 +431,84 @@ img{
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 2rem;
+}
+
+/* Footer*/
+
+.container-small{
+    max-width: 900px;
+    margin: auto;
+    padding: 2rem;
+}
+
+.contacts{
+    text-align: center;
+    padding: 1rem 2rem;
+    color: white;
+    margin-bottom: 1rem;
+}
+
+.contacts .font-small{
+    font-size: 0.5rem;
+    margin-bottom: 1rem;
+} 
+
+.contacts .small{
+    font-size: 0.8rem;
+    line-height: 1.5rem;
+    padding-inline: 10rem;
+    margin-bottom: 2rem;
+}
+
+.contacts h2{
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.contacts h1{
+    color: gold;
+    font-size: 5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.btn-getstarted{
+    margin-bottom: 2rem;
+}
+
+.btn-getstarted a{
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 0.5rem 1.5rem;
+    border-radius: 2rem;
+    background-color: white;
+    color: var(--background-color);
+}
+
+.contacts .font-small a{
+    color: white;
+}
+
+/* footer black*/
+
+.bg-colorblack{
+    background-color: black;
+}
+
+.links p{
+    text-align: center;
+    font-size: 0.8rem;
+    padding-inline: 10rem;
+    color: white;
+}
+
+.links .footer-links{
+    margin-bottom: 4rem;
+}
+
+.links a{
+    color: var(--background-color);
+    font-size: 0.8rem;
 }
